--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.13.5",
     "@tailwindcss/forms": "^0.5.2",
     "aos": "^3.0.0-beta.6",
     "react": "^18.2.0",
